--- a/src/combinedarms/gearscriptor/presentation/fxml/ViewUnits.fxml
+++ b/src/combinedarms/gearscriptor/presentation/fxml/ViewUnits.fxml
@@ -7,9 +7,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="combinedarms.gearscriptor.presentation.ViewUnits">
    <children>
-      <Button layoutX="498.0" layoutY="21.0" mnemonicParsing="false" onAction="#refreshUnitsViewTab" text="Refresh Tabs" />
-      <TabPane fx:id="tabPane" layoutX="14.0" layoutY="10.0" prefHeight="381.0" prefWidth="484.0" tabClosingPolicy="UNAVAILABLE" />
-      <TextArea fx:id="SelectedUnitsTextView" editable="false" layoutX="502.0" layoutY="81.0" prefHeight="309.0" prefWidth="91.0" />
-      <Text layoutX="510.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Units" />
+      <Button layoutX="669.0" layoutY="14.0" mnemonicParsing="false" onAction="#refreshUnitsViewTab" text="Refresh/Load Units" />
+      <TabPane fx:id="tabPane" layoutX="14.0" layoutY="10.0" prefHeight="575.0" prefWidth="484.0" tabClosingPolicy="UNAVAILABLE" />
+      <TextArea fx:id="SelectedUnitsTextView" editable="false" layoutX="511.0" layoutY="42.0" prefHeight="517.0" prefWidth="91.0" />
+      <Text layoutX="519.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Units" />
    </children>
 </AnchorPane>
